# MCP-OCP-fork

./: ReadMe.md  openshift_tool_handlers.py  remediation_workflow.py  server-gpt.py
deploy/ansible/: README.md
deploy/ansible/group_vars/: all.yml
deploy/ansible/playbooks/: deploy.yml
deploy/openshift/: 31-deployment-remediation-api.yaml  32-service-mcp-server.yaml  33-deployment-mcp-server.yaml  Dockerfile.remediation-api  README.md
deploy/openshift/examples/: llm-credentials-secret.yaml
remediation-api/: README.md  pyproject.toml
remediation-api/app/services/: remediation_runner.py
