[project]
name = "remediation-api"
version = "0.1.0"
description = "SSE API to run client-gpt remediate workflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "kubernetes>=28.0.0",
    "openai>=1.0.0",
    "mcp[cli]>=1.25.0",
    "fastmcp",
]

[tool.uv]
dev-dependencies = []
